--- a/API/Web.config
+++ b/API/Web.config
@@ -15,11 +15,11 @@
     <!--<add name="TenantManagerConnectionString" connectionString="Data Source=WSPL_LAP_008;Initial Catalog=NIS_DEV;User ID=nis_admin;Password=Websym@123" />-->
 
     <!-- for QA Server -->
-    <!--<add name="TenantManagerConnectionString" connectionString="Data Source=DESKTOP-JRL065K\SQLEXPRESS;Initial Catalog=NIS_ABSA;User ID=sa;Password=satya@1234" providerName="System.Data.SqlClient" />
-    <add name="NedbankEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=nis.database.windows.net;Initial Catalog=NIS_ABSA;User ID=sa;Password=satya@1234;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <!--<add name="TenantManagerConnectionString" connectionString="Data Source=DESKTOP-JRL065K\SQLEXPRESS;Initial Catalog=NIS_PPS;User ID=sa;Password=satya@1234" providerName="System.Data.SqlClient" />
+    <add name="NedbankEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=nis.database.windows.net;Initial Catalog=NIS_PPS;User ID=sa;Password=satya@1234;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
 
-    <add name="TenantManagerConnectionString" connectionString="Data Source=.;Initial Catalog=NIS_ABSA;Integrated Security=true;" providerName="System.Data.SqlClient" />
-    <add name="NedbankEntities" connectionString="Data Source=.;Initial Catalog=NIS_ABSA;Integrated Security=true;" providerName="System.Data.SqlClient" />
+    <add name="TenantManagerConnectionString" connectionString="Data Source=.;Initial Catalog=NIS_PPS;Integrated Security=true;" providerName="System.Data.SqlClient" />
+    <add name="NedbankEntities" connectionString="Data Source=.;Initial Catalog=NIS_PPS;Integrated Security=true;" providerName="System.Data.SqlClient" />
     
     <!--<add name="TenantManagerConnectionString" connectionString="{{DataBaseConnectionString}}" />-->
 
@@ -64,7 +64,7 @@
     <!--<add key="TenantSQLStorageAccount" value="{{DataBaseConnectionString}}" />-->
 
     <!-- for QA Server -->
-    <add key="TenantSQLStorageAccount" value="Data Source=DESKTOP-JRL065K\SQLEXPRESS;Initial Catalog=NIS_ABSA;User ID=sa;Password=satya@1234" />
+    <add key="TenantSQLStorageAccount" value="Data Source=DESKTOP-JRL065K\SQLEXPRESS;Initial Catalog=NIS_PPS;User ID=sa;Password=satya@1234" />
 
     <!-- for PRD Server -->
     <!--<add key="TenantSQLStorageAccount" value="Data Source=nis.database.windows.net;Initial Catalog=nisProd;User ID=nis_admin;Password=Gauch022$" />-->
