--- a/Repository/App.Config
+++ b/Repository/App.Config
@@ -6,7 +6,7 @@
   </configSections>
   <!--<connectionStrings><add name="NISEntities" connectionString="metadata=res://*/NISDataContext.csdl|res://*/NISDataContext.ssdl|res://*/NISDataContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=nis.database.windows.net;initial Catalog=NIS_DEV2;persist security info=True;user id=nis_admin;password=Gauch022$;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>-->
   <connectionStrings>
-    <add name="NISEntities" connectionString="Data Source=LAPTOP-7703KBI4;Initial Catalog=NIS_ABSA;Integrated Security=true;" providerName="System.Data.EntityClient" />
+    <add name="NISEntities" connectionString="Data Source=LAPTOP-7703KBI4;Initial Catalog=NIS_PPS;Integrated Security=true;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework">
