--- a/FinancialTenantService/Web.config
+++ b/FinancialTenantService/Web.config
@@ -83,6 +83,10 @@
         <assemblyIdentity name="AngleSharp" publicKeyToken="e83494dcdc6d31ea" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-0.16.1.0" newVersion="0.16.1.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.4.1" newVersion="4.0.4.1" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
