--- a/SubscriptionTenantService/packages.config
+++ b/SubscriptionTenantService/packages.config
@@ -13,12 +13,21 @@
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net461" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging" version="2.0.2" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.2" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Options" version="2.0.2" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net461" />
+  <package id="PuppeteerSharp" version="13.0.2" targetFramework="net461" />
   <package id="Swashbuckle" version="5.6.0" targetFramework="net461" />
   <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net461" />
   <package id="Unity.Abstractions" version="3.3.1" targetFramework="net461" />
   <package id="Unity.Container" version="5.8.11" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net461" />
