--- a/Utility/packages.config
+++ b/Utility/packages.config
@@ -6,10 +6,16 @@
   <package id="AngleSharp.Xml" version="0.16.0" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="HtmlSanitizer" version="7.1.475" targetFramework="net461" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging" version="2.0.2" targetFramework="net461" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="5.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Options" version="2.0.2" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net461" />
   <package id="Pdfcrowd.Official" version="4.12.0" targetFramework="net461" />
+  <package id="PuppeteerSharp" version="13.0.2" targetFramework="net461" />
   <package id="SuperSocket.ClientEngine.Core" version="0.10.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
   <package id="System.Collections.Specialized" version="4.3.0" targetFramework="net461" />
@@ -31,6 +37,7 @@
   <package id="System.Text.Encoding.CodePages" version="5.0.0" targetFramework="net461" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net461" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net461" />
   <package id="Ude.NetStandard" version="1.2.0" targetFramework="net461" />
   <package id="Unity" version="4.0.1" targetFramework="net461" />
