--- a/nISPackage/packages.config
+++ b/nISPackage/packages.config
@@ -1,7 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Data.SqlClient" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Data.SqlClient.SNI" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging" version="2.0.2" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.2" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Options" version="2.0.2" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Identity.Client" version="4.14.0" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.6.0" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.Logging" version="5.6.0" targetFramework="net461" />
@@ -11,13 +17,16 @@
   <package id="Microsoft.SqlServer.Management.SqlParser" version="160.20216.14" targetFramework="net461" />
   <package id="Microsoft.SqlServer.SqlManagementObjects" version="161.44091.28" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net461" />
+  <package id="PuppeteerSharp" version="13.0.2" targetFramework="net461" />
   <package id="System.Data.OleDb" version="4.7.0" targetFramework="net461" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.6.0" targetFramework="net461" />
   <package id="System.Management" version="4.7.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
   <package id="System.Security.AccessControl" version="4.7.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.ProtectedData" version="4.7.0" targetFramework="net461" />
   <package id="System.Security.Permissions" version="4.7.0" targetFramework="net461" />
   <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net461" />
   <package id="WixSharp" version="1.14.8" targetFramework="net40" />
   <package id="WixSharp.bin" version="1.14.8" targetFramework="net40" />
 </packages>
