--- a/API/Web.config
+++ b/API/Web.config
@@ -18,7 +18,7 @@
     <!--<add name="TenantManagerConnectionString" connectionString="Data Source=DESKTOP-JRL065K\SQLEXPRESS;Initial Catalog=NIS_PPS;User ID=sa;Password=satya@1234" providerName="System.Data.SqlClient" />
     <add name="NedbankEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=nis.database.windows.net;Initial Catalog=NIS_PPS;User ID=sa;Password=satya@1234;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
 
-    <add name="TenantManagerConnectionString" connectionString="Data Source=.;Initial Catalog=NIS_ABSA;Integrated Security=true;" providerName="System.Data.SqlClient" />
+    <add name="TenantManagerConnectionString" connectionString="Data Source=.;Initial Catalog=NIS_PPS;Integrated Security=true;" providerName="System.Data.SqlClient" />
     <add name="NedbankEntities" connectionString="Data Source=.;Initial Catalog=NIS_ABSA;Integrated Security=true;" providerName="System.Data.SqlClient" />
     
     <!--<add name="TenantManagerConnectionString" connectionString="{{DataBaseConnectionString}}" />-->
