Database connectivity (SalesLogix) using Dapper and stored procedure functions

--- a/Manager/Manager.csproj
+++ b/Manager/Manager.csproj
@@ -174,12 +174,13 @@
     <Compile Include="DynamicWidgetManager.cs" />
     <Compile Include="CountryManager.cs" />
     <Compile Include="MultiTenantUserRoleAccessManager.cs" />
+    <Compile Include="ProductManager.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="ProductManager.cs" />
+    <Compile Include="PPSManager.cs" />
     <Compile Include="StateManager.cs" />
     <Compile Include="StatementSearchManager.cs" />
     <Compile Include="SystemActivityHistoryManager.cs" />
