--- a/API/Web.config
+++ b/API/Web.config
@@ -43,7 +43,7 @@
     <add key="EnableSSL" value="true" />
     <add key="SMTPServer" value="smtp.gmail.com" />
     <add key="SMTPPort" value="587" />
-    <add key="DummySP" value="false" />
+    <add key="DummySP" value="true" />
     
     <!-- PDF Crowd API crednetials (Replace these values once lincese purchase for each client) --> 
     <add key="PdfCrowdUserName" value="demo" />
