--- a/API/API.csproj
+++ b/API/API.csproj
@@ -326,17 +326,45 @@
     <Content Include="Resources\css\font-awesome.min.css" />
     <Content Include="Resources\css\ltr.css" />
     <Content Include="Resources\fonts\fontawesome-webfont.svg" />
+    <Content Include="Resources\images\click-btn.jpg" />
     <Content Include="Resources\images\click-print-stmt-btn.jpg" />
+    <Content Include="Resources\images\click.jpg" />
     <Content Include="Resources\images\CorporateSaverConfirmLogo.png" />
     <Content Include="Resources\images\eConfirm-round.png" />
     <Content Include="Resources\images\eConfirm.png" />
+    <Content Include="Resources\images\fb.jpg" />
+    <Content Include="Resources\images\fb_foot.png" />
+    <Content Include="Resources\images\footer1.PNG" />
     <Content Include="Resources\images\Footer_Image.png" />
+    <Content Include="Resources\images\Footer_Image2.png" />
+    <Content Include="Resources\images\here-img.jpg" />
+    <Content Include="Resources\images\if-btn.jpg" />
+    <Content Include="Resources\images\IfQueryBtn.jpg" />
+    <Content Include="Resources\images\img_1.png" />
+    <Content Include="Resources\images\img_2.png" />
+    <Content Include="Resources\images\img_3.png" />
+    <Content Include="Resources\images\insta_foot.png" />
+    <Content Include="Resources\images\in_foot.png" />
+    <Content Include="Resources\images\leftarrowlogo.png" />
+    <Content Include="Resources\images\lindin.jpg" />
+    <Content Include="Resources\images\logo.jpg" />
     <Content Include="Resources\images\logo.png" />
+    <Content Include="Resources\images\logo2.jpg" />
+    <Content Include="Resources\images\logo3.jpg" />
+    <Content Include="Resources\images\multipleFont.png" />
     <Content Include="Resources\images\NEDBANKLogo.png" />
     <Content Include="Resources\images\NedBankLogoBlack.png" />
     <Content Include="Resources\images\NEDBANK_Name.png" />
     <Content Include="Resources\images\nisLogo.png" />
+    <Content Include="Resources\images\nisLogo1.png" />
+    <Content Include="Resources\images\pps.jpg" />
+    <Content Include="Resources\images\ppsLogo.png" />
     <Content Include="Resources\images\See_money_differently.PNG" />
+    <Content Include="Resources\images\ticktok_foot.png" />
+    <Content Include="Resources\images\tw.jpg" />
+    <Content Include="Resources\images\twitter_foot.png" />
+    <Content Include="Resources\images\youtup.jpg" />
+    <Content Include="Resources\images\you_foot.png" />
     <Content Include="Resources\js\accessibility.js" />
     <Content Include="Resources\js\bootstrap.min.js" />
     <Content Include="Resources\js\export-data.js" />
