--- a/API/Web.config
+++ b/API/Web.config
@@ -20,6 +20,8 @@
 
    <add name="TenantManagerConnectionString" connectionString="Data Source=173.249.1.24;Initial Catalog=NIS_PPS;Persist Security Info=True;User ID=sa;Password=abc123!@#" providerName="System.Data.SqlClient" />
     <add name="NedbankEntities" connectionString="Data Source=173.249.1.24;Initial Catalog=NIS_PPS;Persist Security Info=True;User ID=sa;Password=abc123!@#" providerName="System.Data.SqlClient" />
+	  <!--<add name="TenantManagerConnectionString" connectionString="Data Source=.;Initial Catalog=NIS_PPS;Integrated Security=true;" providerName="System.Data.SqlClient" />
+	  <add name="NedbankEntities" connectionString="Data Source=.;Initial Catalog=NIS_PPS;Integrated Security=true;" providerName="System.Data.SqlClient" />-->
 
 	  
     
