--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,9 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
+- task: NodeTool@0
+  inputs:
+    versionSpec: '14.x'
 - task: NuGetToolInstaller@0
 
 - task: NuGetCommand@2
