--- a/App/ClientApp/package.json
+++ b/App/ClientApp/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build:prod": "npm run build --prod"
+    "build:prod": "ng build --prod"
   },
   "private": true,
   "dependencies": {
