--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -1,50 +1,27 @@
-# ASP.NET Core (.NET Framework)
-# Build and test ASP.NET Core projects targeting the full .NET Framework.
-# Add steps that publish symbols, save build artifacts, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
-
 trigger:
-- dev
+- main
 
 pool:
-  vmImage: 'windows-2019'
-
-variables:
-  solution: '**/*.sln'
-  buildPlatform: 'Any CPU'
-  buildConfiguration: 'Release'
+  vmImage: 'windows-latest'
 
 steps:
-- task: NuGetToolInstaller@0
-
-- task: NuGetCommand@2
-  inputs:
-    restoreSolution: '$(solution)'
-
-- task: NodeTool@0
-  inputs:
-    versionSpec: '14.x'
-    
-- task: VSBuild@1
-  inputs:
-    solution: '$(solution)'
-    msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.artifactStagingDirectory)"'
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
-
 - task: UseDotNet@2
   inputs:
     packageType: 'sdk'
     useGlobalJson: true
-  displayName: 'Use .NET SDK'
 
-- task: VSTest@2
+- task: NodeTool@0
   inputs:
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+    versionSpec: '14.x'
 
-- task: PublishBuildArtifacts@1
-  displayName: 'Publish artifacts'
+- script: |
+    npm install
+    npm run build
+  displayName: 'Build Angular'
+
+- task: DotNetCoreCLI@2
   inputs:
-    PathtoPublish: $(build.artifactstagingdirectory)
-    ArtifactName: 'PublishBuildArtifacts'
+    command: 'build'
+    projects: '**/*.csproj'
+    arguments: '--configuration Release'
+  displayName: 'Build .NET Core'
