--- a/App/ClientApp/package.json
+++ b/App/ClientApp/package.json
@@ -74,7 +74,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "^3.5.3"
+    "typescript": "~3.5.3"
   },
   "resolutions": {
     "serialize-javascript": "^2.1.1"
