--- a/azure-pipelines-8.yml
+++ b/azure-pipelines-8.yml
@@ -21,6 +21,11 @@ steps:
   inputs:
     restoreSolution: '$(solution)'
 
+- script: node --version
+  displayName: 'Print Node.js Version'
+  
+- script: npm --version
+  displayName: 'Print npm Version'
 - task: NodeTool@0
   inputs:
     versionSpec: '12.x'
@@ -28,8 +33,6 @@ steps:
 - script: |
     npm install
     npm install typescript@3.5.3
-    node --version
-    npm --version
     npm cache clean --force
     npm run build
   displayName: 'Build Angular'
