Update azure-pipelines-9.yml for Azure Pipelines

--- a/azure-pipelines-9.yml
+++ b/azure-pipelines-9.yml
@@ -54,8 +54,7 @@ steps:
     PathtoPublish: $(build.artifactstagingdirectory)
     ArtifactName: 'PublishBuildArtifacts'
   
-# Exclude the ClientApp folder
 - checkout: self
   persistCredentials: true
   clean: true
-  path: API/*
+  path: API
